<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />
    <TextView
        android:id="@+id/txvTitleLagrange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleNewtonL"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_margin="25dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <EditText
        android:id="@+id/edtX"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"
        android:hint="@string/HintX"
        android:textSize="30sp"
        android:layout_marginHorizontal="30dp" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <EditText
        android:id="@+id/edtFX"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"
        android:hint="@string/Hfx"
        android:textSize="20sp"
        android:layout_marginHorizontal="30dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >
        <TableRow
            android:gravity="center">

            <EditText
                android:id="@+id/edtX0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal|numberSigned"
                android:hint="@string/HintX0"
                android:textSize="25sp"
                android:layout_marginHorizontal="15dp"/>

            <EditText
                android:id="@+id/edtFX0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal|numberSigned"
                android:hint="@string/HintFX0"
                android:textSize="25sp"
                android:layout_marginHorizontal="15dp"/>

        </TableRow>
        <TableRow
            android:gravity="center">

            <EditText
                android:id="@+id/edtX1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal|numberSigned"
                android:hint="@string/HintX1"
                android:textSize="25sp"
                android:layout_marginHorizontal="15dp"/>

            <EditText
                android:id="@+id/edtFX1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal|numberSigned"
                android:hint="@string/HintFX1"
                android:textSize="25sp"
                android:layout_marginHorizontal="15dp"/>

        </TableRow>
    </TableLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <Button
        android:id="@+id/btnCalculate"
        android:onClick="calculateNewLin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:text="Calcular" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <TextView
        android:id="@+id/txvResult"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_margin="25dp"
        />
</LinearLayout>