<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <Space
    android:layout_width="match_parent"
    android:layout_height="25dp"/>

    <TextView
        android:id="@+id/txvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textSize="25sp"
        android:gravity="center" />
    <TextView
        android:id="@+id/txvSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_subtitle"
        android:textSize="15sp"
        android:gravity="center" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp"/>

    <TableLayout
        android:id="@+id/tloTypeOfInterOrExtra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TableRow android:gravity="center">

            <TextView
                android:id="@+id/txvAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selection1"
                android:textSize="20sp"
                android:layout_marginEnd="10dp"/>

            <Spinner
                android:id="@+id/sprOptions1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/Options"
                android:textSize="25sp"
                android:padding="20dp"
                android:layout_marginStart="10dp"/>
        </TableRow>
        <TableRow android:gravity="center">
            <TextView
                android:id="@+id/txvGrade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selection2"
                android:textSize="20sp"
                android:layout_marginEnd="10dp"/>

            <Spinner
                android:id="@+id/sprOptions2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/Grades"
                android:textSize="25sp"
                android:padding="20dp"
                android:layout_marginStart="10dp"/>

        </TableRow>
    </TableLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <Button
        android:id="@+id/btnGo"
        android:onClick="actionGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonText"
        android:layout_gravity="center"/>
</LinearLayout>